# bigknob-dpf

./: .gitignore  CMakeLists.txt  README.md
dsp/: BigKnobDsp.hpp  Color.hpp  Svf.hpp
plugin/: BigKnobPlugin.cpp  BigKnobUI.cpp  DistrhoPluginInfo.h  ParamInfo.h
test/: CMakeLists.txt  test_dsp.cpp
